Changelog
=========

0.2 (unreleased)
----------------


0.1 (Aug-18-2010)
-------------------
- Initial release/creation of Plone Basic
  [cwainwright]