@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<object name="portal_skins" default_skin="Sunburst Theme">
+
+ <object name="basic_images" remove="True" />
+ <object name="basic_styles" remove="True" />
+ <object name="basic_templates" remove="True" />
+ <skin-path name="Plone Basic" remove="True" />
+
+</object>
