@@ -3,7 +3,8 @@ Changelog
 
 0.2 (unreleased)
 ----------------
-
+- Added an uninstall profile
+  [cwainwright]
 
 0.1 (Aug-18-2010)
 -------------------
